--- a/src/App.css
+++ b/src/App.css
@@ -523,3 +523,28 @@ button.navbar-toggler .navbar-toggler-icon {  filter: invert(1); }
     right: 0;
   }
 }
+
+.modal-backdrop {
+  z-index: 99999 !important;
+}
+
+.modal {
+  z-index: 999999 !important;
+}
+
+.wallet {
+  background-color: #ffffff !important;
+  color: black !important;
+  font-weight: 600 !important;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  border: 2px solid #e5e5e5 !important;
+}
+
+.wallet img {
+  width: 45px;
+  height: 45px;
+  margin-right: 15px;
+}
