--- a/src/App.css
+++ b/src/App.css
@@ -548,3 +548,11 @@ button.navbar-toggler .navbar-toggler-icon {  filter: invert(1); }
   height: 45px;
   margin-right: 15px;
 }
+
+@media(max-width: 700px) {
+  .mobile-wallet-connect {
+    top: 30px;
+    left: 24px;
+    z-index: 10;
+  }
+}
